--- a/index.html
+++ b/index.html
@@ -6,9 +6,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Places I've Lived</title>
 </head>
 <body>
+Places I've lived
+    <ul>
+        <li>Portland, OR</li>
+        <li>Boise, ID</li>
+        <li>California
+            <ul>
+                <li>Bakersfield</li>
+                <li>Ridgecrest</li>
+            </ul>
+        </li>
+        <li>Pensacola, FL</li>
+        <li>Uruma City, Okinawa</li>
+        <li>North Carolina
+                <ul>
+                    <li>Havelock</li>
+                    <li>Jacksonville</li>
+                </ul>
+            </li>
+    </ul>
     
+
+
 </body>
 </html>
