--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Places I've Lived</title>
 </head>
 <body>
-Places I've lived
+<h3>Places I've lived</h3>
     <ul>
         <li>Portland, OR</li>
         <li>Boise, ID</li>
@@ -22,13 +22,19 @@ Places I've lived
         <li>Pensacola, FL</li>
         <li>Uruma City, Okinawa</li>
         <li>North Carolina
-                <ul>
-                    <li>Havelock</li>
-                    <li>Jacksonville</li>
-                </ul>
-            </li>
+            <ul>
+                <li>Havelock</li>
+                <li>Jacksonville</li>
+            </ul>
+        </li>
+        <li>Lyndhurst, NJ</li>
     </ul>
-    
+<h3>Cities I want to visit</h3>
+    <ol>
+        <li>Sydney, Australia</li>
+        <li>Almaty, Kazakhstan</li>
+        <li>Singapore</li>
+    </ol>
 
 
 </body>
