--- a/index.html
+++ b/index.html
@@ -12,28 +12,39 @@
 <h3>Places I've lived</h3>
     <ul>
         <li>Portland, OR</li>
-        <li>Boise, ID</li>
+        Born there. Spent most my time there.
         <li>California
             <ul>
-                <li>Bakersfield</li>
+                
                 <li>Ridgecrest</li>
+                Location of China Lake Naval Air Weapons Station
+                <li>Bakersfield</li>
+                Rural community. White water rafting.
             </ul>
         </li>
         <li>Pensacola, FL</li>
+        About a year of schooling.
         <li>Uruma City, Okinawa</li>
+        Two year duty station
         <li>North Carolina
             <ul>
                 <li>Havelock</li>
+                Duty station
                 <li>Jacksonville</li>
+                Duty station
             </ul>
         </li>
         <li>Lyndhurst, NJ</li>
+        Came to NJ for school
     </ul>
 <h3>Cities I want to visit</h3>
     <ol>
         <li>Sydney, Australia</li>
+        Far away, but not too foreign. 
         <li>Almaty, Kazakhstan</li>
+        Strange part of the world. Not a lot of western tourism.
         <li>Singapore</li>
+        One of the most sucessful cities in the world. Expensive trip though.
     </ol>
 
 
