--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Places I've Lived</title>
 </head>
+
+
+
 <body>
 <h3>Places I've lived</h3>
     <ul>
@@ -46,7 +49,37 @@
         <li>Singapore</li>
         One of the most sucessful cities in the world. Expensive trip though.
     </ol>
+<h3>Cities have visited</h3>
+    <ol>
+        <p>
+        <strong><li>Moscow, Russia</li></strong>
+        Great <span class="reason">exchange rate</span>. Saw the Victory Day <span class="reason">parade</span>. 
+        <em><li>Kiev, Ukraine</li></em>
+        Good food. <span class="reason">Friendly</span> People. Suddenly in a whole new wealth bracket. Very nice for a failed state.
+        <strong><li>Tokyo, Japan</li></strong>
+        Expensive, but fun. <span class="reason">Spectacle</span> everywhere. Ate the best italian food I've ever had.
+        <em><li>Saipan</li></em>
+        <span class="reason">Tropical</span> island. Interesting cultural influences. Gambling. Cock fights.
+        <strong><li>Chiang Mai, Thailand</li></strong>
+        <span class="reason">Elephants, tigers, monkeys, poisonous snakes. </span>
+        <em><li>Angeles City Philippines</li></em>
+        Lots of fun, but a little sad. Gambling, bars, nonsense. 
+        </p>
+    </ol>
+  
+
+    <img class="fit-picture"
+     src="/media/examples/grapefruit-slice-332-332.jpg"
+     alt="Grapefruit slice atop a pile of other slices">
 
 
 </body>
 </html>
+<script>
+.fit-picture {
+    width: 250px;
+}
+span.reason {
+    color: #f00;
+}
+</script>
